<resources>
    <string name="app_name">Smart Home</string>
    <string name="version">version</string>

    <string name="empty" />
    <string name="sh_url">file:///android_asset/main_sha.html</string>
    <string name="br_url">file:///android_asset/main_wra.html</string>
    <!--    <string name="stats_url_local">file:///android_asset/statistic/index.html</string>-->
    <string name="test_url">file:///android_asset/test_measurement/index.html</string>
    <string name="stats_url">http://winecard.ltd.ua/dev/smart_home/hw_statistic/index.html</string>

    <string name="default_debug_br_url">http://192.168.1.2/SmartHome/mainWRD.html</string>
    <string name="default_debug_sh_url">http://192.168.1.2/SmartHome/mainSHD.html</string>
    <string name="default_debug_stats_url">http://192.168.1.2:3000</string>
    <string name="default_debug_test_url">http://192.168.1.2:3000</string>
    <!--string name="default_debug_test_url">http://192.168.1.2/Projects/HTML5UI/src/main.html</string-->
    <!--string name="default_debug_test_url">http://192.168.1.2/Projects/AutoPilot/src/main.html</string-->
    <!--string name="default_debug_stats_url">http://192.168.1.2/SmartHome/statistic/index.html</string-->
    <!-- Drawer Menu -->
    <string name="menu_title">SMART HOME CONTROL</string>
    <string name="menu_deck">ESP8266 Server</string>
    <string name="menu_copyright">© 2016 • 2020 JENERAL SAMOPAL COMPANY</string>
    <!-- Massages -->
    <string name="msg_exit">Press once again to exit!</string>
    <string name="msg_no_sd">There is no any sd card</string>
    <string name="msg_warn">Warning!</string>
    <string name="msg_permissions">without requested permissions, application operation will be limited</string>

    <string name="menu_develop_title">DEVELOPER MODE</string>
    <string name="menu_bath_room">Bathroom Climate Control</string>
    <string name="menu_smart_home">Smart Home Control</string>
    <string name="menu_statistic">Bathroom Statistics</string>
    <string name="menu_test">Test Measurement</string>
    <string name="menu_settings">Preferences</string>

    <!-- String Measurement -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String settings -->
    <string name="action_developer_mode">Dev</string>
    <string name="title_activity_settings">Preferences</string>

    <!-- main header-->
    <string name="pref_header_general">General Preferences</string>
    <string name="pref_summary_general">Basic Parameters for Application\nSmart Home</string>
    <string name="pref_header_advanced">Advanced Preferences</string>
    <string name="pref_summary_advanced">Developer Advanced Preferences\nand url settings</string>
    <string name="pref_header_about">About</string>
    <string name="pref_summary_about">Information About the Android\nApplication</string>

    <!-- string settings general -->
    <string name="switch_developer_mode">Developer Mode</string>
    <string name="switch_developer_desc">Set Developer Mode</string>
    <string name="switch_developer_desc_on">Set Normal Mode</string>
    <string name="switch_set_default">Default Settings</string>
    <string name="switch_set_default_desc">Reset Default Settings</string>
    <string name="switch_set_default_desc_on">For the changes to take effect return to application</string>
    <string name="user_settings_title">SETTINGS MEASUREMENT</string>
    <string name="edit_home_ssid">Home WiFi SSID</string>
    <string name="edit_home_ssid_default">JSC-ASUS5G</string>
    <string name="ssid_default">DEV</string>
    <string name="edit_esp_ip">ESP 8266 Server IP</string>
    <string name="edit_esp_ip_default">http://192.168.1.77</string>
    <string name="edit_measurement_interval">Measurement Interval (second)</string>
    <string name="edit_interval_default">120</string>
    <string name="home_network">Home Network</string>
    <string name="guest_network">Guest Network</string>

    <!-- string settings advanced -->
    <string name="advanced_group_title">SETTING DEVELOPER URL</string>
    <string name="edit_dev_br">Bathroom Control</string>
    <string name="edit_dev_sh">Smart Home Control</string>
    <string name="edit_dev_stats">Bathroom Statistic</string>
    <string name="edit_dev_test">Test Measurement</string>

    <!-- string settings about -->
    <string name="about_app_title">Smart Home Control</string>
    <string name="about_copyright">© 2017 • 2020 Jeneral Samopal Company\nDesign and Coding by Alex Dovby</string>

    <string name="title_list_db_activity">Measurement List</string>
    <string name="menu_item_clear">Clear</string>
    <string name="msg_list_records">List records is empty</string>

    <!-- dialog  exit app -->
    <string name="title_dialog">Delete Records in Database</string>
    <string name="message_dialog">Do you want to delete the last record or all entries in the database?</string>

    <string name="button_last_records">Last</string>
    <string name="button_all_records">All</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_never">Never</string>
    <string name="button_continue">Continue</string>

</resources>
