<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:icon="@drawable/ic_debug"
        android:key="sw_dev_mode"
        android:summary="@string/switch_developer_desc"
        android:summaryOff="@string/switch_developer_desc"
        android:summaryOn="@string/switch_developer_desc_on"
        android:title="@string/switch_developer_mode" />
    <SwitchPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:icon="@drawable/ic_settings_applications"
        android:key="sw_reset_default"
        android:summary="@string/switch_set_default_desc"
        android:summaryOff="@string/switch_set_default_desc"
        android:summaryOn="@string/switch_set_default_desc_on"
        android:title="@string/switch_set_default" />
    <Preference
        android:icon="@drawable/ic_user_settings"
        android:selectable="false"
        android:shouldDisableView="false"
        android:title="@string/user_settings_title">
    </Preference>
    <EditTextPreference
        android:defaultValue="@string/edit_home_ssid_default"
        android:icon="@drawable/ic_router"
        android:key="edit_ssid"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/edit_home_ssid_default"
        android:title="@string/edit_home_ssid" />
    <EditTextPreference
        android:defaultValue="@string/edit_esp_ip_default"
        android:icon="@drawable/ic_node_server"
        android:key="edit_esp_ip"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/edit_esp_ip_default"
        android:title="@string/edit_esp_ip" />
    <EditTextPreference
        android:defaultValue="@string/edit_interval_default"
        android:icon="@drawable/ic_alarm"
        android:inputType="number"
        android:key="edit_measurement"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/edit_interval_default"
        android:title="@string/edit_measurement_interval" />

</PreferenceScreen>
